test/expected/xec_explain_lla.out
explain long long _Accum x
                  ^
19: error: "long long _Accum" is illegal for built-in type
